// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Text Reference render create mode 1`] = `
<div>
  <div
    class="OverlaySpinner--overlaySpinner"
  >
    <form
      class="FormikForm--main"
    >
      <div>
        <div
          class="bp3-form-group"
          data-id="null-0"
        >
          <div
            class="bp3-form-content"
          >
            <div
              class="Layout--vertical StyledProps--main"
            >
              <div
                class="label"
              >
                <span
                  class="align bp3-label stringWithTooltipLabel"
                  data-tooltip-id="testWrapper_username"
                >
                  username
                </span>
                <div
                  class="bp3-form-group"
                  data-id="undefined-1"
                >
                  <div
                    class="bp3-form-content"
                  >
                    <div
                      class="bp3-popover-wrapper DropDown--main"
                    >
                      <div
                        class="bp3-popover-target"
                      >
                        <div
                          class=""
                        >
                          <div
                            class="Layout--horizontal StyledProps--main DropDown--dropdownButton DropDown--minWidth StyledProps--flex"
                            data-testid="dropdown-button"
                            style="min-width: unset;"
                          >
                            <div
                              class="Layout--horizontal StyledProps--main DropDown--labelWrapper StyledProps--flex"
                            >
                              <p
                                class="StyledProps--font Text--lineclamp StyledProps--main DropDown--label"
                                data-testid="dropdown-value"
                                style="--text-line-clamp: 1;"
                              >
                                plaintext
                              </p>
                            </div>
                            <div
                              class="Layout--horizontal StyledProps--main DropDown--btnWrapper StyledProps--flex"
                            >
                              <span
                                class="bp3-icon StyledProps--main StyledProps--color StyledProps--color-grey400"
                                data-icon="main-chevron-down"
                              >
                                <svg
                                  height="8"
                                  viewBox="0 0 14 8"
                                  width="8"
                                  xmlns="http://www.w3.org/2000/svg"
                                >
                                  <path
                                    d="M13 0c-.3 0-.5.1-.7.3L7 5.6 1.7.3C1.5.1 1.3 0 1 0 .4 0 0 .4 0 1c0 .3.1.5.3.7l6 6c.2.2.4.3.7.3s.5-.1.7-.3l6-6c.2-.2.3-.4.3-.7 0-.6-.4-1-1-1z"
                                    fill="#4d5969"
                                  />
                                </svg>
                              </span>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="bp3-form-group textCss"
              >
                <div
                  class="bp3-form-content"
                >
                  <div
                    class="bp3-input-group"
                  >
                    <input
                      autocomplete="off"
                      class="bp3-input"
                      name="usernametextField"
                      type="text"
                      value=""
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </form>
  </div>
</div>
`;

exports[`Text Reference render edit mode with encrypted value 1`] = `
<div>
  <div
    class="OverlaySpinner--overlaySpinner"
  >
    <form
      class="FormikForm--main"
    >
      <div>
        <div
          class="bp3-form-group"
          data-id="null-0"
        >
          <div
            class="bp3-form-content"
          >
            <div
              class="Layout--vertical StyledProps--main"
            >
              <div
                class="label"
              >
                <span
                  class="align bp3-label stringWithTooltipLabel"
                  data-tooltip-id="testWrapper_username"
                >
                  username
                </span>
                <div
                  class="bp3-form-group"
                  data-id="undefined-1"
                >
                  <div
                    class="bp3-form-content"
                  >
                    <div
                      class="bp3-popover-wrapper DropDown--main"
                    >
                      <div
                        class="bp3-popover-target"
                      >
                        <div
                          class=""
                        >
                          <div
                            class="Layout--horizontal StyledProps--main DropDown--dropdownButton DropDown--minWidth StyledProps--flex"
                            data-testid="dropdown-button"
                            style="min-width: unset;"
                          >
                            <div
                              class="Layout--horizontal StyledProps--main DropDown--labelWrapper StyledProps--flex"
                            >
                              <p
                                class="StyledProps--font Text--lineclamp StyledProps--main DropDown--label"
                                data-testid="dropdown-value"
                                style="--text-line-clamp: 1;"
                              >
                                plaintext
                              </p>
                            </div>
                            <div
                              class="Layout--horizontal StyledProps--main DropDown--btnWrapper StyledProps--flex"
                            >
                              <span
                                class="bp3-icon StyledProps--main StyledProps--color StyledProps--color-grey400"
                                data-icon="main-chevron-down"
                              >
                                <svg
                                  height="8"
                                  viewBox="0 0 14 8"
                                  width="8"
                                  xmlns="http://www.w3.org/2000/svg"
                                >
                                  <path
                                    d="M13 0c-.3 0-.5.1-.7.3L7 5.6 1.7.3C1.5.1 1.3 0 1 0 .4 0 0 .4 0 1c0 .3.1.5.3.7l6 6c.2.2.4.3.7.3s.5-.1.7-.3l6-6c.2-.2.3-.4.3-.7 0-.6-.4-1-1-1z"
                                    fill="#4d5969"
                                  />
                                </svg>
                              </span>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="bp3-form-group textCss"
              >
                <div
                  class="bp3-form-content"
                >
                  <div
                    class="bp3-input-group"
                  >
                    <input
                      autocomplete="off"
                      class="bp3-input"
                      name="usernametextField"
                      type="text"
                      value=""
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </form>
  </div>
</div>
`;

exports[`Text Reference render edit mode with text value 1`] = `
<div>
  <div
    class="OverlaySpinner--overlaySpinner"
  >
    <form
      class="FormikForm--main"
    >
      <div>
        <div
          class="bp3-form-group"
          data-id="null-0"
        >
          <div
            class="bp3-form-content"
          >
            <div
              class="Layout--vertical StyledProps--main"
            >
              <div
                class="label"
              >
                <span
                  class="align bp3-label stringWithTooltipLabel"
                  data-tooltip-id="testWrapper_username"
                >
                  username
                </span>
                <div
                  class="bp3-form-group"
                  data-id="undefined-1"
                >
                  <div
                    class="bp3-form-content"
                  >
                    <div
                      class="bp3-popover-wrapper DropDown--main"
                    >
                      <div
                        class="bp3-popover-target"
                      >
                        <div
                          class=""
                        >
                          <div
                            class="Layout--horizontal StyledProps--main DropDown--dropdownButton DropDown--minWidth StyledProps--flex"
                            data-testid="dropdown-button"
                            style="min-width: unset;"
                          >
                            <div
                              class="Layout--horizontal StyledProps--main DropDown--labelWrapper StyledProps--flex"
                            >
                              <p
                                class="StyledProps--font Text--lineclamp StyledProps--main DropDown--label"
                                data-testid="dropdown-value"
                                style="--text-line-clamp: 1;"
                              >
                                plaintext
                              </p>
                            </div>
                            <div
                              class="Layout--horizontal StyledProps--main DropDown--btnWrapper StyledProps--flex"
                            >
                              <span
                                class="bp3-icon StyledProps--main StyledProps--color StyledProps--color-grey400"
                                data-icon="main-chevron-down"
                              >
                                <svg
                                  height="8"
                                  viewBox="0 0 14 8"
                                  width="8"
                                  xmlns="http://www.w3.org/2000/svg"
                                >
                                  <path
                                    d="M13 0c-.3 0-.5.1-.7.3L7 5.6 1.7.3C1.5.1 1.3 0 1 0 .4 0 0 .4 0 1c0 .3.1.5.3.7l6 6c.2.2.4.3.7.3s.5-.1.7-.3l6-6c.2-.2.3-.4.3-.7 0-.6-.4-1-1-1z"
                                    fill="#4d5969"
                                  />
                                </svg>
                              </span>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="bp3-form-group textCss"
              >
                <div
                  class="bp3-form-content"
                >
                  <div
                    class="bp3-input-group"
                  >
                    <input
                      autocomplete="off"
                      class="bp3-input"
                      name="usernametextField"
                      type="text"
                      value="test"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </form>
  </div>
</div>
`;
